# whisper-local

./: .editorconfig  .git-commit-msg.tmp  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start_whisper_key.vbs  whisper-local.cmd
.claude/commands/: build-pyapp-exe.md  manage-pyapp-venv.md  test-from-wsl.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/: AUDIT.md  demo-recording.md  distribution.md  faq.md  github-discoverability.md  gpu-setup.md  project-index.md  publishing-to-pypi.md  streaming.md  troubleshooting.md
docs/design/: auto-paste-reliability.md
docs/roadmap/: completed.md  roadmap.md
packaging/homebrew/: whisper-local.rb
packaging/winget/: whisper-local.installer.yaml
pyapp-build/: CLAUDE.md  build-pyapp.ps1  setup-build-env.ps1
src/whisper_key/: app_rules.defaults.yaml  app_rules.py  audio_recorder.py  audit_log.py  autostart.py  bundle_logs.py  cheat_sheet.py  clipboard_manager.py  commands.defaults.yaml  config.defaults.yaml  config_manager.py  dictionary.py  doctor.py  fallback_window.py  first_run.py  history_window.py  hotkey_listener.py  instance_manager.py  level_overlay.py  local_server.py  main.py  noise_suppression.py  onboarding.py  onboarding_tutorial.py  profiles.defaults.yaml  profiles.py  selftest.py  settings_io.py  settings_ui.py  setup_wizard.py  state_manager.py  stats.py  streaming_delivery.py  streaming_manager.py  system_tray.py  text_postprocess.py  transcript_log.py  transforms.defaults.yaml  transforms.py  update_check.py  (+6 more)
src/whisper_key/platform/: __init__.py
src/whisper_key/platform/macos/: app.py  foreground.py  permissions.py
src/whisper_key/platform/windows/: app.py  console.py  foreground.py  gpu.py  keyboard.py
tests/: test_smoke.py
tools/: record-demo.ps1
