[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-local"
version = "0.15.0"
description = "Free, open-source, fully offline AI dictation for Windows and macOS. Hold a hotkey, speak, get text at the cursor. 100% local. Powered by Whisper."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Rohit Burani", email = "50279000+drajb@users.noreply.github.com"}
]
maintainers = [
    {name = "Rohit Burani", email = "50279000+drajb@users.noreply.github.com"}
]
keywords = [
    "dictation", "speech-to-text", "whisper", "voice-typing",
    "transcription", "ai-dictation", "local-ai", "offline",
    "push-to-talk", "voice-recognition", "accessibility",
    "faster-whisper", "privacy", "self-hosted", "wispr-flow",
    "ollama", "voice-commands", "windows", "macos"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    # Cross-platform
    "faster-whisper>=1.2.1",
    "ctranslate2==4.7.1",
    "numpy>=1.24.0",
    "soxr>=0.3.0",
    "sherpa-onnx>=1.11.3",
    "sounddevice>=0.4.6",
    "pyperclip>=1.8.2",
    "ruamel.yaml>=0.18.14",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "hf-xet>=1.1.5",
    "playsound3>=2.0",
    "ten-vad>=1.0.6",

    # Windows-only
    "global-hotkeys>=0.1.7; sys_platform=='win32'",
    "pywin32>=306; sys_platform=='win32'",

    # macOS-only
    "pyobjc-framework-Quartz; sys_platform=='darwin'",
    "pyobjc-framework-ApplicationServices; sys_platform=='darwin'",
]

[project.optional-dependencies]
# Opt-in whisper.cpp backend (set `whisper.backend: whisper_cpp` in user_settings.yaml)
# Models auto-download from huggingface.co/ggerganov/whisper.cpp on first use.
whispercpp = ["pywhispercpp>=1.2"]

# Spectral noise suppression via noisereduce (set `audio.noise_suppression.enabled: true`)
noise = ["noisereduce>=3.0.0"]

[project.scripts]
whisper-local = "whisper_key.main:main"
wl = "whisper_key.main:main"

[project.urls]
Homepage = "https://github.com/drajb/whisper-local"
Repository = "https://github.com/drajb/whisper-local"
Documentation = "https://github.com/drajb/whisper-local#readme"
Issues = "https://github.com/drajb/whisper-local/issues"
Discussions = "https://github.com/drajb/whisper-local/discussions"
Changelog = "https://github.com/drajb/whisper-local/blob/master/CHANGELOG.md"
"Author" = "https://gekro.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"whisper_key" = ["assets/**/*", "platform/*/assets/*", "config.defaults.yaml", "commands.defaults.yaml", "profiles.defaults.yaml", "app_rules.defaults.yaml", "transforms.defaults.yaml"]